@@ -1,3 +1,9 @@
+2008-02-07  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (::tkcon::Bindings): prevent Expand virtual events
+	from triggering follow-on events (most important for <Tab>).
+	(::tkcon::Retrieve): remove extraneous http::geturl call.
+	
 2007-06-22  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (::tkcon::EvalCmd): add OPT(resultfilter) and 'tkcon
@@ -7,7 +13,7 @@
 	Ensure that initial files are sources at level #0.
 	Convert args after (--|-argv|-args) into slave arguments and set
 	them as the main $::argv/$::argc for propagation.
-	
+
 2007-06-21  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* docs/tkcon.1.man, docs/tkcon.n.man, docs/tkconrc.5.man (new): 
